test/valid/TestAndBis/TrueTrue.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: AbstractMethod.plume 615 2012-05-21 14:52:19Z vv $
 */
class TrueTrue extends Object is

	method main : () -> String is
		new TestAnd().m(true, true)