test/invalid/KeywordsCapitalLetterField/KeywordsCapitalLetterField.plume
/**
 * Keyword com letra maiuscula: field
 *
 * @author 37059, Rita Henriques
 * @version $Id: KeywordsCapitalLetterField.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class KeywordsCapitalLetterField extends Object is
  
  Field tipo : String
  
  method getTipo : () -> Object is
		tipo
